<resources>
    <string name="app_name">Learning App</string>
    <string name="up">Up Button</string>

    <string name="file_loading_error_message">Failed to load</string>
    <string name="illustration_not_available">Illustration Not Available</string>
    <string name="lesson_image">Class Image</string>
    <string name="lesson_name">Class Name</string>

    <string name="pref_mode_label">Mode Type</string>
    <string name="pref_mode_key" translatable="false">mode</string>

    <!-- Add Activity -->
    <string name="title_activity_add_lesson">Add Lesson Activity</string>
    <string name="edit_lesson_description">Edit Lesson Description</string>
    <string name="add_button">Add</string>
    <string name="add_lesson_title">Please, add the Lesson Title!</string>

    <!-- Edit Activity -->
    <string name="title_activity_edit_lesson">Edit Lesson Activity</string>
    <string name="edit_lesson_title">Please, edit the Lesson Title!</string>
    <string name="add_lesson_title_label">Add Lesson Title</string>
    <string name="edit_lesson_title_label">Edit Lesson Title</string>
    <string name="edit_button">Save</string>
    <string name="cancel_button">Cancel</string>

    <!-- Delete Dialog -->
    <string name="dialog_delete_lesson">Delete the lesson?</string>
    <string name="dialog_delete_lesson_from_cloud">Delete the lesson and ALL ITS PARTS from Cloud?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="part_image">Lesson Part Image</string>
    <string name="lesson_part_name">Lesson Part Name</string>
    <string name="add_lesson_part_title_label">Add Part Title</string>
    <string name="add_lesson_part_title">Please, add the Lesson Part Title!</string>
    <string name="lesson_title">Lesson Title</string>
    <string name="title_activity_add_lesson_part">Add Lesson Part Activity</string>
    <string name="edit_lesson_part_title_label">Edit Lesson Part</string>
    <string name="edit_lesson_part_title">Please, edit the Lesson Part Title!</string>

    <!-- Drawer -->
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="user_email">user email</string>
    <string name="username">User Name:</string>
    <string name="username_hint">username</string>
    <string name="userEmail">Email:</string>
    <string name="userEmail_hint">email</string>

    <!-- Menu -->
    <string name="view">View</string>
    <string name="create">Create</string>
    <string name="menu_action_delete_label">Delete</string>
    <string name="menu_action_upload_label">Upload</string>
    <string name="menu_action_refresh_label">Refresh</string>
    <string name="menu_action_edit_label">Edit</string>
    <string name="menu_action_cancel_label">Cancel</string>
    <string name="menu_action_delete_from_cloud_label">Delete from Cloud</string>
    <string name="menu_action_job_sync_label">Smart Refresh</string>
    <string name="menu_action_job_upload_label">Smart Upload</string>
    <string name="menu_action_notification_test">Notification Test</string>
    <string name="menu_action_insert_fake_label">Insert Fake Data</string>

    <string name="pref_view_label">View</string>
    <string name="pref_mode_view" translatable="false">view</string>

    <string name="pref_create_label">Create</string>
    <string name="pref_mode_create" translatable="false">create</string>

    <!-- fab button -->
    <string name="action_add">Action Add</string>

    <string name="my_lessons">My Lessons</string>
    <string name="group_lessons">Group Lessons</string>
    <string name="part_text">Part Text</string>
    <string name="title_activity_part_detail">Part Detail Activity</string>
    <string name="edit_part_activity_label">Edit Part Activity</string>
    <string name="edit_part_text_label">Edit Lesson Part Text</string>
    <string name="edit_part_text">Please, edit the text!</string>
    <string name="pick_image_video">Pick an Image or Video?</string>

    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="ok">OK!</string>
    <string name="form_pick_photos">Complete action using</string>
    <string name="form_pick_image">Select an image</string>
    <string name="form_pick_video">Select a video</string>
    <string name="dialog_delete_lesson_part">Delete the lesson part?</string>
    <string name="log">Log</string>
    <string name="upload_type">Please, choose what to upload</string>

    <!-- Upload Dialog -->
    <string name="images">Images, Videos and Text</string>
    <string name="text">Only Text</string>

    <!-- Notification -->
    <string name="main_notification_channel_name">primary</string>
    <string name="sync_user_notification_title">Finished refreshing the user lessons</string>
    <string name="sync_group_notification_title">Finished refreshing the group lessons</string>
    <string name="sync_group_notification_body">Please, verify the log!</string>
    <string name="sync_user_notification_body">Please, verify the log!</string>
    <string name="upload_notification_title">Upload has finished</string>
    <string name="upload_notification_body">Please, see the log!</string>

    <string name="ignore_pending_intent_text">OK</string>

    <string name="widget_header">Learning App</string>
    <string name="widget_image">Widget Image</string>

    <string name="refresh_job_type">Start a background download of the group lessons?</string>
    <string name="upload_job_type">Start a background upload of the selected user lesson?</string>

    <string name="upload_confirm">Upload the lesson selected?</string>
    <string name="upload">Upload</string>
    <string name="view_mode_option">View Mode option</string>
    <string name="create_mode_option">Create Mode option</string>
    <string name="cancel_option">Cancel option</string>
    <string name="insert_fake_data_option">Insert Fake Data option</string>
    <string name="delete_from_cloud_option">Delete From Cloud option</string>
    <string name="delete_option">Delete option</string>
    <string name="smart_refresh_option">Smart Refresh option</string>
    <string name="smart_upload_option">Smart Upload option</string>
    <string name="refresh_database_option">Refresh database option</string>
    <string name="upload_to_cloud_option">Upload to cloud option</string>
    <string name="edit_option">Edit option</string>
    <string name="login_option">Login option</string>
    <string name="logout_option">Logout option</string>
    <string name="navigate_to_your_lessons">Navigate to Your Lessons</string>
    <string name="navigate_to_the_group_lessons">Navigate to the Group Lessons</string>
    <string name="view_the_log">view the Log</string>
    <string name="loading_indicator">Loading Indicator</string>
    <string name="player_view">Player View</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="app_logo">App Logo</string>
    <string name="menu_action_cancel_task_label">Cancel Task</string>
    <string name="cancel_task_option">Cancel the Task</string>

</resources>
