<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:background="?attr/colorPrimaryDark"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_user_name_label"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/username"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:hint="@string/username_hint"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_user_email_label"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/userEmail"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:hint="@string/userEmail_hint"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </LinearLayout>

</LinearLayout>