<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddLessonPartActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetStart="72dp"
        app:layout_scrollFlags="snap" />

    <!-- EditText for getting lesson title input -->
    <TextView
        android:id="@+id/textLessonTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_text_margin_start"
        android:layout_marginEnd="@dimen/edit_text_margin_end"
        android:padding="16dp"
        android:text="@string/lesson_title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_text_margin_start"
        android:layout_marginEnd="@dimen/edit_text_margin_end"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/add_lesson_part_title_label" />

    <EditText
        android:id="@+id/addTextLessonPartTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_text_margin_start"
        android:layout_marginEnd="@dimen/edit_text_margin_end"
        android:gravity="start"
        android:hint="@string/add_lesson_part_title"
        android:inputType="textMultiLine"
        android:padding="16dp"
        android:layout_marginBottom= "@dimen/activity_horizontal_margin"/>

    <!-- Add button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_text_margin_start"
        android:layout_marginEnd="@dimen/edit_text_margin_end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="onClickAddLessonPart"
            android:text="@string/add_button"
            android:textColor="@android:color/primary_text_dark"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorAccentLight"
            android:onClick="onClickCancel"
            android:text="@string/cancel_button"
            android:textColor="@android:color/primary_text_dark"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>