<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/ll_lesson_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/lesson_card_margin_horizontal"
    android:background="@drawable/list_item_selector">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cv_lesson_title"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/lesson_card_margin_horizontal"
        android:layout_marginEnd="@dimen/lesson_card_margin_horizontal"
        android:layout_height="@dimen/part_card_height"
        card_view:cardCornerRadius="4dp">

        <TextView
            android:id="@+id/tv_lesson_image_error_message_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:text="@string/illustration_not_available" />

        <ImageView
            android:id="@+id/iv_main_lesson_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/lesson_image"/>

        <TextView
            android:id="@+id/tv_main_lesson_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:padding="16dp"
            android:text="@string/lesson_name"
            android:textSize="20sp"
            android:visibility="invisible" />

    </android.support.v7.widget.CardView>



</LinearLayout>