<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/ll_lesson_part_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/lesson_card_margin_horizontal">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cv_lesson_part_title"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/lesson_card_margin_horizontal"
        android:layout_marginEnd="@dimen/lesson_card_margin_horizontal"
        android:layout_height="@dimen/lesson_card_height"
        card_view:cardCornerRadius="4dp">

        <TextView
            android:id="@+id/tv_lesson_part_image_error_message_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:text="@string/illustration_not_available" />

        <ImageView
            android:id="@+id/iv_main_part_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/part_image"/>

        <TextView
            android:id="@+id/tv_main_lesson_part_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:gravity="start|center_vertical"
            android:padding="16dp"
            android:text="@string/lesson_part_name"
            android:hint="@string/lesson_part_name"
            android:background="@drawable/list_item_selector"
            android:textSize="@dimen/lesson_part_title_text_size"
            android:visibility="invisible" />

    </android.support.v7.widget.CardView>



</FrameLayout>