<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PartsFragment"
    android:focusable="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lesson_card_margin_horizontal"
        android:layout_marginStart="@dimen/lesson_card_margin_horizontal"
        android:layout_marginEnd="@dimen/lesson_card_margin_horizontal"
        android:layout_gravity="top"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <TextView
            android:id="@+id/tv_lesson_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:padding="16dp"
            android:hint="@string/lesson_title"
            android:textSize="@dimen/lesson_part_title_text_size"
            app:layout_scrollFlags="scroll|enterAlways" />

    </android.support.design.widget.AppBarLayout>


    <FrameLayout
        android:id="@+id/fl_parts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_parts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <TextView
            android:id="@+id/tv_error_message_display"
            android:textSize="@dimen/error_message_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:text="@string/file_loading_error_message"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_height="42dp"
            android:layout_width="42dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:contentDescription="@string/loading_indicator"/>

    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>